# fflas-ffpack

./: .gitignore  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  fflas-ffpack_1.6.0.orig.tar.gz.delta  fflas-ffpack_1.6.0.orig.tar.gz.id  fflas-ffpack_2.2.1.orig.tar.gz.delta  fflas-ffpack_2.2.1.orig.tar.gz.id
benchmark/: Makefile.in
benchmark/graph/: Makefile.in
benchmark/html/: Makefile.in
benchmark/src/: Makefile.in
benchmark/src/BLAS_LAPACK/: Makefile.in
benchmark/src/BLOCKING/: Makefile  Makefile.in
benchmark/src/FFLAS_FFPACK/: Makefile.in
benchmark/test-src/: Makefile.in
debian/: changelog  control  copyright  fflas-ffpack-common.install  fflas-ffpack-config.1  fflas-ffpack-dev-doc.doc-base  fflas-ffpack-dev-doc.docs  fflas-ffpack-dev-doc.lintian-overrides  fflas-ffpack-user-doc.doc-base  fflas-ffpack-user-doc.docs  fflas-ffpack-user-doc.lintian-overrides  fflas-ffpack.install  fflas-ffpack.manpages  rules  watch
debian/patches/: fix-file-path-in-doc.patch  series
doc/: Makefile.in
fflas-ffpack/: Makefile.in  fflas-ffpack-config.h  fflas-ffpack-optimise.h
fflas-ffpack/fflas/: Makefile.in
fflas-ffpack/ffpack/: Makefile.in
fflas-ffpack/field/: Makefile.in
fflas-ffpack/interfaces/: Makefile.am
fflas-ffpack/interfaces/src/: Makefile.am
fflas-ffpack/interfaces/src/cxx/: ff_fadd.cpp  ff_faxpy.cpp  ff_fdot.cpp  ff_fequal.cpp  ff_fgemm.cpp  ff_fgemv.cpp  ff_fger.cpp  ff_fiszero.cpp  ff_fneg.cpp  ff_freduce.cpp  ff_fscal.cpp  ff_fsquare.cpp  ff_fsub.cpp  ff_ftrmm.cpp  ff_ftrsm.cpp  ff_ftrsv.cpp  ff_pfadd.cpp  ff_pfsub.cpp  fflas_ffpack_interfaces_cxx.h
fflas-ffpack/interfaces/src/include/: ffintert.h  ffintert_cxx.h  ffintert_matlab.h  fflas_c_types.h
fflas-ffpack/interfaces/src/matlab/: Makefile.am  fadd.cpp  fadd.m  faxpy.cpp  faxpy.m  fdot.cpp  fdot.m  fequal.cpp  fequal.m  fgemm.cpp  fgemm.m  fgemv.cpp  fgemv.m  fger.cpp  fger.m  fiszero.cpp  fiszero.m  fneg.cpp  fneg.m  freduce.cpp  freduce.m  fscal.cpp  fscal.m  fsquare.cpp  fsquare.m  fsub.cpp  fsub.m  ftrmm.cpp  ftrmm.m  ftrsm.cpp  ftrsm.m  ftrsv.cpp  ftrsv.m  pfadd.cpp  pfadd.m  pfsub.cpp  pfsub.m
macros/: Makefile.in  intf-cxx-check.m4  intf-matlab-check.m4
optimiser/: Makefile.in
tests/: Makefile.am  Makefile.in
tests/matlab/: Makefile.am  fadd_test_0.m  fadd_test_1.m  fadd_test_2.m  fadd_test_3.m  faxpy_test_0.m  faxpy_test_1.m  fdot_test_0.m  fequal_test_0.m  fequal_test_1.m  fequal_test_2.m  fequal_test_3.m  ff_init.m  ff_init_Bool.m  ff_init_Element.m  ff_init_Int.m  ff_init_Matrix.m  ff_init_Size.m  ff_init_Vector.m  ff_rand_field.m  ff_rand_matrix.m  ff_rand_size.m  fgemm_test_0.m  fgemv_test_0.m  fger_test_0.m  fiszero_test_0.m  fiszero_test_1.m  fiszero_test_2.m  fiszero_test_3.m  fneg_test_0.m  fneg_test_1.m  freduce_test_0.m  freduce_test_1.m  fscal_test_0.m  fscal_test_1.m  fsquare_test_0.m  fsub_test_0.m  fsub_test_1.m  ftrmm_test_00.m  ftrmm_test_01.m  (+43 more)
utils/: Makefile.am  Makefile.in
